# mops

configParser/: Makefile  PackageConfig.cpp  PackageConfig.h  conf.xml  test.cpp  xmlParser.cpp  xmlParser.h
mpkg/: ChangeLog  SPECS  beta-release  build_all  init_structure  make_packages
mpkg/configurator/: devel.tar.bz2
mpkg/documentation/: Structure.flw  Structure.kra  data.xml  error_handling_OO.ods  mpkg-package-specs.html  mpkg-package-specs.odt  mpkg-package-specs.rtf  pkgsrc-specs.odt  src-data.xml  sshfs-1.8-src-1.mbuild  structure.odt  systemsetup_conception.odt  todo_list
mpkg/installer/: build  clean  getcdromlist.sh  installer_scheme  license  setup.cpp  setup.h
mpkg/installer/initrd/: Packinitrd.Mops.new  new_slack_initrd.txt
mpkg/manager/: CMakeLists.txt.template  Makefile  Makefile.linux  Makefile.mac  aboutbox.cpp  aboutbox.h  aboutbox.ui  build  corethread.cpp  corethread.h  db.cpp  db.h  groups.xml  loading.cpp  loading.h  main.cpp  mainwindow.cpp  mainwindow.h  manager.pro  pkgmanager.ui  pkgmanager_ru.qm  pkgmanager_ru.ts  preferencesbox.cpp  preferencesbox.h  preferencesbox.ui  tablelabel.cpp  tablelabel.h
mpkg/manager/applink/: PackageBuilder.desktop  PackageManager.desktop  UpdateChecker.desktop
mpkg/manager/icons/: indicator.mng
mpkg/packagebuilder/: Makefile  build  filelistwidget.cpp  filelistwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  package.cpp  package.h  package_builder.ui  packagebuilder.pro  packagebuilder_ru.qm  packagebuilder_ru.ts  qt.pro  querybox.cpp  querybox.h
mpkg/pkg_descriptions/: console.tar.bz2  gui.tar.bz2  lib.tar.bz2  tools.tar.bz2
mpkg/pkg_descriptions/console/: data.xml  slack-desc  slack-required
mpkg/pkg_descriptions/gui/: data.xml  slack-desc  slack-required
mpkg/pkg_descriptions/lib/: data.xml  slack-desc  slack-required
mpkg/pkg_descriptions/tools/: data.xml  slack-desc  slack-required
mpkg/qt/: main.cpp
mpkg/sql/: create_database.sql  packages.db
mpkg/src/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.h  HttpDownload.cpp  HttpDownload.h  IDownload.h  Makefile  Makefile.installpkg  Makefile.lib  Makefile.linux  Makefile.mac  PackageConfig.cpp  PackageConfig.h  actions.h  build_all  bus.cpp  bus.h  cErrors.h  cdconfig.cpp  cdconfig.h  cddebug.cpp  cddebug.h  colors.h  conditions.cpp  conditions.h  config.cpp  config.h  constants.cpp  constants.h  converter.cpp  converter.h  core.cpp  core.h  dataunits.cpp  dataunits.h  dbstruct.cpp  debug.cpp  debug.h  dependencies.cpp  dependencies.h  (+38 more)
mpkg/src/lang_src/: installpkg-ng.po
mpkg/updatechecker/: Makefile  build  main.cpp  monitor.cpp  monitor.h  trayapp.cpp  trayapp.h  updatechecker.pro  updatechecker_ru.qm  updatechecker_ru.ts
ports2mops/: convert.pl  prep_test.sh  template.xml
ports2mops/test/: Makefile  pkg-plist
webmops/: .cvsignore  build.properties  build.xml  data.sql
webmops/WebContent/: AddComment.jsp  Default.jsp  EditProfile.jsp  FileList.jsp  FindPackageAjax.jsp  ListPackages.jsp  Login.jsp  PackageInfo.jsp  PackageNotFound.jsp  Register.jsp  SelectPackageType.jsp  UploadPackageForm.jsp  UserProfile.jsp  index.jsp  taglib.jsp  taglib.tld
webmops/WebContent/WEB-INF/: app-config.xml  app-configuration.xsd  spring-bean.xml  web.xml
webmops/WebContent/WEB-INF/classes/: StripesResources.properties  hibernate.cfg.xml  log4j.properties  spring-bean.xml
webmops/WebContent/admin/: AddEditDistribution.jsp  AddEditMirror.jsp  AddEditUser.jsp  Dashboard.jsp  Default.jsp  DeleteUser.jsp  ListDistributions.jsp  ListMirrors.jsp  index.jsp
webmops/WebContent/js/: application.js
webmops/WebContent/layout/: header.jsp  sidebar.jsp  standart.jsp
webmops/WebContent/styles/: indigo.css  main.css  mops.css
webmops/src/ru/rpunet/webmops/dao/: CommentManager.java  DistributionManager.java  FileManager.java  MirrorManager.java  PackageManager.java  PersonManager.java
webmops/src/ru/rpunet/webmops/importer/: Importer.java  InvalidSourceLocationException.java  MalformedTokenException.java  PackageListReader.java  SlackwarePackagesListReaderImpl.java  TokenType.java
webmops/src/ru/rpunet/webmops/model/: Comment.java  Distribution.java  File.java  Mirror.java  MirrorType.java  Package.java  PackagesTypes.java  Person.java  PersonGroups.java
webmops/src/ru/rpunet/webmops/tags/: CustomTagErrorRenderer.java  GuestPaneTag.java  JavaScriptIncludeTag.java  SecurePaneTag.java  StylesheetTag.java
webmops/src/ru/rpunet/webmops/tests/: CommentTest.java  DistributionManagerTest.java  DistributionTests.java  FileTest.java  MirrorManagerTest.java  MirrorTest.java  PackageManagerTest.java  PackageTest.java  PersonTest.java
webmops/src/ru/rpunet/webmops/utils/: AbstractAction.java  AppConfigurator.java  ApplicationConfiguration.java  BoundEntityAction.java  ColoredExceptionHandler.java  HibernateSessionInViewFilter.java  HibernateUtil.java  NotAuthenticatedException.java  NotAuthorisedException.java  PasswordService.java  PasswordServiceImpl.java  SecurityInterceptor.java  SystemUnavaliableException.java  WebmopsActionBean.java  WebmopsActionBeanContext.java  WebmopsActionResolver.java
webmops/src/ru/rpunet/webmops/web/: BlockUserActionBean.java  CssResourcesLoaderActionBean.java  DefaultActionBean.java  DeleteUserActionBean.java  DownloadPackageActionBean.java  EditProfileActionBean.java  ListActionBean.java  LoginActionBean.java  LogoutActionBean.java  PackageInfoActionBean.java  PackageLookupActionBean.java  PasswordReminderActionBean.java  RegisterActionBean.java  SelectPackageTypeActionBean.java  ShowFilesActionBean.java  UploadMPKGPackageActionBean.java  UploadPackageActionBean.java  UploadSlackwarePackageActionBean.java  UserProfileActionBean.java
webmops/src/ru/rpunet/webmops/web/admin/: AddDistributionActionBean.java  AddEditUserActionBean.java  AddMirrorActionBean.java  ApplicationSettingsActionBean.java  DashboardActionBean.java  DefaultActionBean.java  DistributionsActionBean.java  MirrorsActionBean.java
